# powershell-bookmarker

./: Cargo.toml  bookmarks.txt  testfile.ps1
src/: main.rs
