[package]
name = "powershell_bookmarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ngrammatic = "0.4.0"
powershell_script = "1.1.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
